fixed the contact img wrappers width to appropiate size on tablets

--- a/src/App.css
+++ b/src/App.css
@@ -422,6 +422,10 @@ MEDIA QUERIES
     flex-direction: column;
   }
 
+  .contact__img--wrapper{
+    width: 25em;
+  }
+
   .footer {
     height: 20vh;
   }
